--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🦾 Iron Man 210000000000000000000000000000 Edition 🚀🌌</title>
+  <title>🦾 Iron Man Rocking Edition 🚀🌌</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@900&display=swap" rel="stylesheet">
 
   <style>
